--- a/app/src/main/res/layout/custom_app_bar_profile.xml
+++ b/app/src/main/res/layout/custom_app_bar_profile.xml
@@ -6,6 +6,7 @@
     android:background="@drawable/custom_bg_shape_bottom_rounded">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageProfile"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:layout_marginEnd="30dp"
@@ -15,25 +16,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <TextView
         android:id="@+id/textHai"
         style="@style/TextContent.Body.PopReg"
-        android:layout_height="25dp"
+        android:layout_height="30dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="32dp"
         android:text="@string/hai"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         style="@style/TextContent.Body.PopSemiBold"
         android:text="@string/example_name"
+        android:layout_marginEnd="10dp"
+        android:maxLines="2"
         android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toStartOf="@id/imageProfile"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="@id/textHai"
         app:layout_constraintTop_toBottomOf="@id/textHai" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
