--- a/app/src/main/res/layout/custom_menu.xml
+++ b/app/src/main/res/layout/custom_menu.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="80dp"
+    android:id="@+id/cardMenu"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/iconMenu"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="top|center_horizontal"
         android:contentDescription="@string/icon_menu"
         android:src="@drawable/icon_trash_deposit" />
@@ -18,9 +18,8 @@
         style="@style/TextContent.Body.PopMedium"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginTop="6dp"
+        android:textAlignment="center"
         android:text="@string/deposit"
-        android:textSize="10sp"
-        tools:ignore="SmallSp" />
-
-
+        android:textSize="12sp"
+        />
 </LinearLayout>
