--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="80dp"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.customers.home.HomeFragment">
 
     <include
         android:id="@+id/viewAppBar"
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toBottomOf="@id/cardBalance" />
 
     <include
-        android:id="@+id/menuPickUpTrash"
+        android:id="@+id/menuPickUpWaste"
         layout="@layout/custom_menu"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@id/cardBalance" />
 
     <include
-        android:id="@+id/menuHistory"
+        android:id="@+id/menuHistoryDeposit"
         layout="@layout/custom_menu"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
         android:layout_marginEnd="70dp"
-        app:layout_constraintEnd_toEndOf="@id/menuPickUpTrash"
+        app:layout_constraintEnd_toEndOf="@id/menuPickUpWaste"
         app:layout_constraintStart_toEndOf="@id/menuWithdrawBalance"
         app:layout_constraintTop_toBottomOf="@id/menuDeposit" />
 
@@ -83,7 +83,7 @@
         android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/menuHistory"
+        app:layout_constraintTop_toBottomOf="@id/menuHistoryDeposit"
         tools:itemCount="2"
         tools:listitem="@layout/item_content_news" />
 </androidx.constraintlayout.widget.ConstraintLayout>
