--- a/app/src/main/res/layout/fragment_transaction_history.xml
+++ b/app/src/main/res/layout/fragment_transaction_history.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.transaction_history.TransactionHistoryFragment">
+    tools:context=".ui.customers.transaction_history.TransactionHistoryFragment">
 
     <TextView
         android:id="@+id/textHeadline"
