--- a/app/src/main/res/layout/fragment_choose_camera_or_galeri_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_choose_camera_or_galeri_bottom_sheet.xml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.bottom_sheet.ChooseCameraOrGaleriBottomSheet">
+    android:layout_height="wrap_content"
+    android:background="@drawable/custom_corner_top"
+    android:backgroundTint="@color/light">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/buttonClose"
+        style="@style/TextContent.Body.PopMedium"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="18dp"
+        android:textSize="16sp"
+        android:text="@string/text_cancel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="30dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buttonClose">
+
+        <include
+            android:id="@+id/cardChooseOption"
+            layout="@layout/item_card_choose_camera_or_gallery"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
