--- a/app/src/main/res/layout/card_customer_scheduling_pick_up.xml
+++ b/app/src/main/res/layout/card_customer_scheduling_pick_up.xml
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textListNasabah"
@@ -21,14 +21,19 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewNasabahRegistrant"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
             app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textListNasabah"
-            tools:listitem="@layout/item_content_nasabah_scheduling" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constrainedHeight="true"
+            app:layout_constraintVertical_bias="0"
+            tools:listitem="@layout/item_content_nasabah_registrant_pick_up_waste" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
