--- a/app/src/main/res/layout/item_content_nasabah_registrant_pick_up_waste.xml
+++ b/app/src/main/res/layout/item_content_nasabah_registrant_pick_up_waste.xml
@@ -5,6 +5,8 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
     app:cardBackgroundColor="@color/white"
+    app:strokeColor="@color/black"
+    app:cardElevation="5dp"
     app:cardCornerRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -12,56 +14,71 @@
         android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imagePhoto"
-            android:layout_width="60dp"
+            android:id="@+id/imagePhotoProfile"
+            android:layout_width="80dp"
             android:layout_height="80dp"
+            android:layout_marginVertical="16dp"
             android:layout_marginStart="16dp"
             android:src="@drawable/me"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageView
+            android:id="@+id/buttonNext"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="16dp"
+            android:contentDescription="@string/icon"
+            android:src="@drawable/icon_arrow_left"
+            app:layout_constraintBottom_toTopOf="@id/buttonReject"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
-            android:id="@+id/textValueName"
+            android:id="@+id/textName"
             style="@style/TextContent.Body.PopSemiBold"
             android:layout_marginStart="10dp"
             android:layout_marginTop="12dp"
             android:text="@string/example_name"
-            app:layout_constraintStart_toEndOf="@id/imagePhoto"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintStart_toEndOf="@id/imagePhotoProfile"
+            app:layout_constraintEnd_toStartOf="@id/buttonNext"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textValueDate"
+            android:id="@+id/textDate"
             style="@style/TextContent.Body.PopReg"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="20dp"
             android:text="@string/example_name"
-            app:layout_constraintStart_toEndOf="@id/imagePhoto"
-            app:layout_constraintTop_toBottomOf="@id/textValueName" />
+            app:layout_constraintStart_toEndOf="@id/imagePhotoProfile"
+            app:layout_constraintTop_toBottomOf="@id/textName" />
 
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonEdit"
-            android:layout_width="100dp"
+            android:id="@+id/buttonApprove"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:backgroundTint="@color/deep_green"
-            android:text="@string/approve"
-            app:layout_constraintStart_toEndOf="@id/imagePhoto"
-            app:layout_constraintTop_toBottomOf="@id/textValueDate" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonDelete"
-            android:layout_width="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="5dp"
+            android:text="@string/approve"
+            app:layout_constraintStart_toEndOf="@id/imagePhotoProfile"
+            app:layout_constraintTop_toBottomOf="@id/textDate" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonReject"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:backgroundTint="@color/red"
             android:text="@string/reject"
-            app:layout_constraintStart_toEndOf="@id/buttonEdit"
-            app:layout_constraintTop_toBottomOf="@id/textValueDate" />
+            app:layout_constraintStart_toEndOf="@id/buttonApprove"
+            app:layout_constraintTop_toTopOf="@id/buttonApprove" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
