--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="light_green">#66BB6A</color>
     <color name="grey">#D0D0D0</color>
     <color name="light_grey">#E8E8E8</color>
+    <color name="light">#EDEFEF</color>
     <color name="deep_grey">#808080</color>
     <color name="transparent">#00000000</color>
     <color name="red">#FF0000</color>
