fix:nasabah feature

--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="26dp"
         android:autofillHints="password"
-        android:hint="@string/password_hint"
+        android:hint="@string/input_old_password"
         android:textColorHint="@color/grey"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewOldPassword"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="26dp"
         android:autofillHints="password"
-        android:hint="@string/password_hint"
+        android:hint="@string/input_new_password"
         android:textColorHint="@color/grey"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewNewPassword"
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="26dp"
         android:autofillHints="password"
-        android:hint="@string/password_hint"
+        android:hint="@string/input_repeat_new_password"
         android:textColorHint="@color/grey"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewRepeatPassword"
@@ -104,6 +104,6 @@
         android:text="@string/save"
         app:cornerRadius="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edlRepeatNewPassword" />
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
