--- a/app/src/main/res/layout/fragment_add_or_update_waste_type.xml
+++ b/app/src/main/res/layout/fragment_add_or_update_waste_type.xml
@@ -9,9 +9,8 @@
     <include
         android:id="@+id/viewAppbar"
         layout="@layout/custom_app_bar_button_and_title"
-        android:layout_width="match_parent"
-        android:layout_height="48dp" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textNameWaste"
