--- a/app/src/main/res/layout/fragment_home_admin.xml
+++ b/app/src/main/res/layout/fragment_home_admin.xml
@@ -26,14 +26,30 @@
             app:layout_constraintBottom_toBottomOf="@id/viewAppBar"
             app:layout_constraintTop_toBottomOf="@id/viewAppBar" />
 
+        <TextView
+            android:id="@+id/textTitleAllDeposit"
+            style="@style/TextContent.Body.PopSemiBold"
+            android:layout_marginTop="10dp"
+            android:text="@string/total_all_deposit_waste"
+            app:layout_constraintStart_toStartOf="@id/cardBalance"
+            app:layout_constraintTop_toBottomOf="@id/cardBalance" />
+
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/chart"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/cardBalance"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/textTitleAllDeposit"
             app:layout_constraintVertical_bias="0" />
+
+        <TextView
+            android:id="@+id/textTitleDeposit"
+            style="@style/TextContent.Body.PopSemiBold"
+            android:layout_marginTop="10dp"
+            android:text="@string/total_deposit_waste_per_minggu"
+            app:layout_constraintStart_toStartOf="@id/cardBalance"
+            app:layout_constraintTop_toBottomOf="@id/chart" />
 
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/barChart"
@@ -42,8 +58,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/chart"
+            app:layout_constraintTop_toBottomOf="@id/textTitleDeposit"
             app:layout_constraintVertical_bias="0" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
