--- a/app/src/main/res/layout/item_content_type_waste.xml
+++ b/app/src/main/res/layout/item_content_type_waste.xml
@@ -13,6 +13,9 @@
             android:id="@+id/cardImage"
             android:layout_width="112dp"
             android:layout_marginTop="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0"
+            android:layout_marginBottom="10dp"
             android:layout_height="117dp"
             android:layout_marginStart="16dp"
             app:cardCornerRadius="15dp"
